// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInformations /> should render 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Informations sur le statut du salarié
  </h2>
</div>
`;

exports[`<StepInformations /> should render catégorie 1`] = `
.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c3 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c1 {
  margin: 2rem 0;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Informations sur le statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <select
      class="c3"
      id="input-criteria.catégorie socio-professionnelle"
      name="criteria.catégorie socio-professionnelle"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="20| Cadres"
      >
        Cadres
      </option>
      <option
        value="38| Collaborateurs"
      >
        Collaborateurs
      </option>
    </select>
  </div>
</div>
`;

exports[`<StepInformations /> should render coefficient 1`] = `
.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c3 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c1 {
  margin: 2rem 0;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Informations sur le statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <select
      class="c3"
      id="input-criteria.catégorie socio-professionnelle"
      name="criteria.catégorie socio-professionnelle"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="20| Cadres"
      >
        Cadres
      </option>
      <option
        value="38| Collaborateurs"
      >
        Collaborateurs
      </option>
    </select>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.coefficient"
    >
      Quel est le coefficient hiérarchique du salarié ?
    </label>
    <select
      class="c3"
      id="input-criteria.coefficient"
      name="criteria.coefficient"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="18| 700 à 750"
      >
        700 à 750
      </option>
      <option
        value="19| 800 à 830 inclus"
      >
        800 à 830 inclus
      </option>
    </select>
  </div>
</div>
`;
